# amazon-test

./: pyproject.toml
src/: main.py
tests/: test_main.py
